--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -135,7 +135,7 @@ This task uses k-nearest neighbor topology. The particles will only update the $
 \begin{figure}[H]
 
 \includegraphics[width=\linewidth]{3nn_no_inertia}
-\caption{runs of 1d and 2d problem with 3 nearest neighbor topology, no decreasing inertia weight
+\caption{runs of 1d and 2d problem with 3 nearest neighbor topology, no decreasing inertia weight.
 Magenta small line is 1d, Blue one is 2d}
 \end{figure}
 As we can see the 2D problem takes a lot more iterations to finish than the 1D circle problem which starts out with a pretty low fitness value.
@@ -154,7 +154,7 @@ Magenta small line is 1d, Blue one is 2d}
 The decreasing inertia weight helps the particles find the goal faster. The particles will (if allowed to run for that long) all converge to the goal if the inertia weight is decreasing or less than 1. We tried with inertia weight 0.7298 which made all of them converge to the goal point quite fast (around 50-100 iterations).
 
 \section{Task 3 - 1-0 Knapsack Problem}\label{3}
-For this task we decided to use the binary knapsack solution as suggested by the lecturer. Every particle has n dimensions (where n is number of packages) and for every dimension there's either a position 0 or 1 that shows if the package is included or not.
+For this task we decided to implement the binary knapsack algorithm as suggested by the lecturer. Every particle has n dimensions (where n is number of packages) and for every dimension there's either a position 0 or 1 that shows if the package is included or not.
 In other (more precise words):
 For every particle there's $n$ number of dimensions, where $j$ is the numbers in the range $0...j...(n-1)$. Here $x_j$ can either be 0 or 1.
 If $x_j = 1$ then package number $j$ is included in the container, if $x_j = 0$ then package number $j$ is not included in the container.\\
@@ -199,7 +199,7 @@ It's pretty interesting to see the different runs. The run where $c_1$ and $c_2$
 \caption{3 runs of the knapsack particle problem, 4000 particles, decreasing inertia weight. Graph shows global fitness}
 \end{center}
 \end{figure}
-These runs are pretty interesting and they are almost the opposite of the knapsack runs without the decreasing inertia. We see that the  $C_1$ and $C_2$ = 0.7 run yields best value, which is exactly the opposite of the non-decreasing inertia runs. The 0.5 run doesn't seem to find a better solution, it's stuck for a big amount of time. It's weird that they get stuck, because the local and social values shouldn't have as much effect on the particles and they should be allowed to explore the positions more, but they somehow can't find a better solution. This may be the similar issue as described earlier, the global is currently quite good and the particles struggle to diverge enough from this while moving to valid positions that are better than the current one.
+These runs are pretty interesting and they are almost the opposite of the knapsack runs without the decreasing inertia. We see that the  $C_1$ and $C_2$ = 0.7 run yields the best value, which is exactly the opposite of the non-decreasing inertia runs. The 0.5 run doesn't seem to find a better solution, it's stuck for a big amount of time. It's weird that they get stuck, because the local and social values shouldn't have as much effect on the particles and they should be allowed to explore the positions more, but they somehow can't find a better solution. This may be the similar issue as described earlier, the global is currently quite good and the particles struggle to diverge enough from this while moving to valid positions that are better than the current one.
 
 \section{Task 4 - 1-0 Knapsack problem with volume restriction}
 The Knapsack PSO problem from Task \ref{3} is extended with random volume values for each package. These values range from $1m^3$ to $5m^3$, however due to a notice on It's learning we decreased the max volume from $1000m^3$ to $250m^3$.
