--- a/report/aiprog3Report.tex
+++ b/report/aiprog3Report.tex
@@ -199,7 +199,7 @@ It's pretty interesting to see the different runs. The run where $c_1$ and $c_2$
 \caption{3 runs of the knapsack particle problem, 4000 particles, decreasing inertia weight. Graph shows global fitness}
 \end{center}
 \end{figure}
-These runs are pretty interesting and they are almost the opposite of the knapsack runs without the decreasing inertia. We see that the  $C_1$ and $C_2$ = 0.7 run yields the best value, which is exactly the opposite of the non-decreasing inertia runs. The 0.5 run doesn't seem to find a better solution, it's stuck for a big amount of time. It's weird that they get stuck, because the local and social values shouldn't have as much effect on the particles and they should be allowed to explore the positions more, but they somehow can't find a better solution. This may be the similar issue as described earlier, the global is currently quite good and the particles struggle to diverge enough from this while moving to valid positions that are better than the current one.
+These runs are pretty interesting and they are almost the opposite of the knapsack runs without the decreasing inertia. We see that the  $c_1$ and $c_2$ = 0.7 run yields the best value, which is exactly the opposite of the non-decreasing inertia runs. The 0.5 run doesn't seem to find a better solution, it's stuck for a big amount of time. It's weird that they get stuck, because the local and social values shouldn't have as much effect on the particles and they should be allowed to explore the positions more, but they somehow can't find a better solution. This may be the similar issue as described earlier, the global is currently quite good and the particles struggle to diverge enough from this while moving to valid positions that are better than the current one.
 
 \section{Task 4 - 1-0 Knapsack problem with volume restriction}
 The Knapsack PSO problem from Task \ref{3} is extended with random volume values for each package. These values range from $1m^3$ to $5m^3$, however due to a notice on It's learning we decreased the max volume from $1000m^3$ to $250m^3$.
